[package]
authors = ["Caleb Taylor <caleb89taylor@gmail.com>"]
edition = "2018"
name = "rust_os"
version = "0.1.0"

[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.13.2"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[[test]]
harness = false
name = "should_panic"
